--- a/style.css
+++ b/style.css
@@ -13,8 +13,8 @@ iframe{
 	width:100% !important;
 	flex:2 !important;
 }
-#twitter_box iframe{
-	height:100% !important;
+#twitter_box{
+	overflow:scroll;
 }
 a:hover{
 	cursor:pointer;
@@ -35,8 +35,11 @@ a,a:hover{
 	font-size:16px;
 	overflow:hidden;
 }
+.bg-green{
+	background:#31bc93 !important;
+}
 .green{
-	color:#27ae60;
+	color:#31bc93;
 }
 .red{
 	color:#bc3131;
@@ -65,6 +68,13 @@ a,a:hover{
 	overflow:none;
 	display:flex;
 	flex-direction: column;
+}
+.dragger{
+	font-size: 24px;
+	line-height: 14px;
+}
+.right{
+	float:right;
 }
 a{
 	color:white;
